@@ -228,6 +228,8 @@ toggleLoweredCallback(WMenu *menu, WMenuEntry *entry)
 
     toggleLowered(entry->clientdata);
 
+    entry->flags.indicator_on = !(((WDock*)entry->clientdata)->lowered);
+
     wMenuPaint(menu);
 }
 
@@ -1001,11 +1003,7 @@ updateClipOptionsMenu(WMenu *menu, WDock *dock)
 
     /* keep on top */
     entry = menu->entries[index];
-    if (dock->lowered) {
-	entry->text = _("Keep on Top");
-    } else {
-	entry->text = _("Allow Lowering");
-    }
+    entry->flags.indicator_on = !dock->lowered;
     entry->clientdata = dock;
 
     /* collapsed */
@@ -1047,6 +1045,9 @@ makeClipOptionsMenu(WScreen *scr)
 
     entry = wMenuAddCallback(menu, _("Keep on Top"),
                              toggleLoweredCallback, NULL);
+    entry->flags.indicator = 1;
+    entry->flags.indicator_on = 1;
+    entry->flags.indicator_type = MI_CHECK;
 
     entry = wMenuAddCallback(menu, _("Collapsed"),
                              toggleCollapsedCallback, NULL);
@@ -1054,19 +1055,19 @@ makeClipOptionsMenu(WScreen *scr)
     entry->flags.indicator_on = 1;
     entry->flags.indicator_type = MI_CHECK;
 
-    entry = wMenuAddCallback(menu, _("AutoCollapse"),
+    entry = wMenuAddCallback(menu, _("Autocollapse"),
                              toggleAutoCollapseCallback, NULL);
     entry->flags.indicator = 1;
     entry->flags.indicator_on = 1;
     entry->flags.indicator_type = MI_CHECK;
 
-    entry = wMenuAddCallback(menu, _("AutoRaiseLower"),
+    entry = wMenuAddCallback(menu, _("Autoraise"),
                              toggleAutoRaiseLowerCallback, NULL);
     entry->flags.indicator = 1;
     entry->flags.indicator_on = 1;
     entry->flags.indicator_type = MI_CHECK;
 
-    entry = wMenuAddCallback(menu, _("AutoAttract Icons"),
+    entry = wMenuAddCallback(menu, _("Autoattract Icons"),
                              toggleAutoAttractCallback, NULL);
     entry->flags.indicator = 1;
     entry->flags.indicator_on = 1;
@@ -1092,6 +1093,9 @@ dockMenuCreate(WScreen *scr, int type)
     if (type != WM_CLIP) {
         entry = wMenuAddCallback(menu, _("Keep on Top"),
                                  toggleLoweredCallback, NULL);
+        entry->flags.indicator = 1;
+        entry->flags.indicator_on = 1;
+        entry->flags.indicator_type = MI_CHECK;
     } else {
         entry = wMenuAddCallback(menu, _("Clip Options"), NULL, NULL);
         scr->clip_options = makeClipOptionsMenu(scr);
@@ -3308,14 +3312,8 @@ openDockMenu(WDock *dock, WAppIcon *aicon, XEvent *event)
     if (dock->type == WM_DOCK) {
 	/* keep on top */
 	entry = dock->menu->entries[index];
-	
-	if (dock->lowered) {
-	    entry->text = _("Keep on Top");
-	} else {
-	    entry->text = _("Allow Lowering");
-	}
+        entry->flags.indicator_on = !dock->lowered;
 	entry->clientdata = dock;
-	
 	dock->menu->flags.realized = 0;
     } else {
 	/* clip options */
